Update security configuration to use modern Spring Security syntax
- Replaced outdated configuration methods with functional style configuration
- Disabled CSRF for stateless session
- Updated session management to use STATELESS policy
- Configured CORS with custom settings
- Added JWT token validation filter before BasicAuthenticationFilter
- Enabled HTTP basic authentication and form login (optional)